--- a/Android_studio/MyApplication2/build.gradle
+++ b/Android_studio/MyApplication2/build.gradle
@@ -6,14 +6,14 @@ buildscript {
     //指定仓库
     repositories {
         mavenLocal()
-        maven {url('https://maven.aliyun.com/repository/public/')}
+        maven {url('https://maven.aliyun.com/repository/central')}
         mavenCentral()
         google()
     }
     //指定特殊依赖
     dependencies {
         //依赖gradle7.0.2
-        classpath "com.android.tools.build:gradle:7.0.2"
+        classpath 'com.android.tools.build:gradle:7.1.2'
 
     }
 
